Fixed bug #47168 (printf of floating point variable prints maximum of 40 decimal places).